--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.6"
+    "css-loader": "^2.1.1",
+    "element-ui": "^2.7.0",
+    "normalize.css": "^8.0.1",
+    "style-loader": "^0.23.1",
+    "vue": "^2.6.6",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
@@ -18,6 +25,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
+    "sass-loader": "^7.1.0",
+    "semver": "^6.0.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
