--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "core-js": "^2.6.5",
     "css-loader": "^2.1.1",
     "element-ui": "^2.7.0",
+    "holoview-sdk": "^0.0.44",
     "normalize.css": "^8.0.1",
+    "pubsub-js": "^1.9.3",
     "style-loader": "^0.23.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
+    "vuera": "^0.2.7",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
